# lisplings

./: .gitignore  Cargo.toml  README.md
exercises/: info.toml
exercises/00-intro/: 01-hello.slisp  02-comments.slisp  03-numbers.slisp
exercises/01-atoms/: 01-numbers.slisp  02-strings.slisp  03-booleans.slisp  04-symbols.slisp
exercises/02-lists/: 01-list.slisp  02-cons.slisp  03-car-cdr.slisp  04-nested.slisp  05-predicates.slisp
exercises/03-define/: 01-variables.slisp  02-functions.slisp  03-multiple-args.slisp  04-using-functions.slisp
exercises/04-conditionals/: 01-if.slisp  02-predicates.slisp  03-cond.slisp  04-nested.slisp
exercises/05-recursion/: 01-countdown.slisp  02-length.slisp  03-sum.slisp  04-member.slisp  05-reverse.slisp
exercises/06-higher-order/: 01-lambda.slisp  02-map.slisp  03-filter.slisp  04-fold.slisp  05-compose.slisp
exercises/07-let-and-closures/: 01-let.slisp  02-nested-let.slisp  03-closures.slisp  04-adder.slisp
hints/00-intro/: 01-hello.md  02-comments.md  03-numbers.md
hints/01-atoms/: 01-numbers.md  02-strings.md  03-booleans.md  04-symbols.md
hints/02-lists/: 01-list.md  02-cons.md  03-car-cdr.md  04-nested.md  05-predicates.md
hints/03-define/: 01-variables.md  02-functions.md  03-multiple-args.md  04-using-functions.md
hints/04-conditionals/: 01-if.md  02-predicates.md  03-cond.md  04-nested.md
hints/05-recursion/: 01-countdown.md  02-length.md  03-sum.md  04-member.md  05-reverse.md
hints/06-higher-order/: 01-lambda.md  02-map.md  03-filter.md  04-fold.md  (+1 more)
src/: exercise.rs  main.rs  runner.rs
(+38 files in other folders)
