[package]
name = "lisplings"
version = "0.5.0"
edition = "2024"
description = "Interactive exercises for learning SeqLisp, a Lisp dialect"
license = "MIT"
repository = "https://github.com/navicore/lisplings"

[[bin]]
name = "lisplings"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
toml = "0.8"
serde = { version = "1", features = ["derive"] }
colored = "2"
ctrlc = "3"
notify = "7"
notify-debouncer-mini = "0.5"
include_dir = "0.7"
